--- a/templates/manager/task_confirm_delete.html
+++ b/templates/manager/task_confirm_delete.html
@@ -1,10 +1,11 @@
 {% extends "layouts/base.html" %}
+
 {% block content %}
-<h1>
-  Delete car?
-</h1>
-<form action="" method="post">
-  {% csrf_token %}
-  <input type="submit" value="Yes" class="btn btn-danger">
-</form>
+<div class="container mt-5">
+  <h1 class="mb-4">Delete car?</h1>
+  <form action="" method="post">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">Yes</button>
+  </form>
+</div>
 {% endblock %}
