--- a/templates/manager/task_form.html
+++ b/templates/manager/task_form.html
@@ -2,12 +2,14 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>
-  {{ object|yesno:"Update,Create,No" }} task
+<div class="container mt-5">
+  <h1 class="mb-4">
+    {{ object|yesno:"Update,Create,No" }} task
   </h1>
   <form method="post" action="">
-  {% csrf_token %}
-  {{ form|crispy }}
-  <input type="submit" value="Submit" class="btn btn-primary">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
+</div>
 {% endblock %}
