--- a/templates/manager/task_confirm_delete.html
+++ b/templates/manager/task_confirm_delete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5">
-  <h1 class="mb-4">Delete car?</h1>
+  <h1 class="mb-4">Delete task?</h1>
   <form action="" method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Yes</button>
