navigation.html changed

--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -66,7 +66,7 @@
                 <div class="media">
                   <img class="img-radius" src="{% static 'assets/images/user/avatar-1.jpg' %}" alt="Generic placeholder image">
                   <div class="media-body">
-                    <p><strong>John Doe</strong><span class="n-time text-muted"><i
+                    <p><strong>{{ user.name }}</strong><span class="n-time text-muted"><i
                           class="icon feather icon-clock m-r-10"></i>30 min</span></p>
                     <p>New ticket Added</p>
                   </div>
