Sidebar.html changed and all teams were added

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -33,6 +33,11 @@
             <span class="pcoded-micon"><i data-feather="users"></i></span><span class="pcoded-mtext">All workers</span>
           </a>
         </li> 
+        <li>
+          <a href="{% url 'manager:team-list' %}" class="nav-link ">
+            <span class="pcoded-micon"><i data-feather="slack"></i></span><span class="pcoded-mtext">All teams</span>
+          </a>
+        </li> 
         {% if not request.user.is_authenticated %}
         <li
           data-username="Authentication Sign up Sign in reset password Change password Personal information profile settings map form subscribe"
