--- a/templates/manager/team_confirm_delete.html
+++ b/templates/manager/team_confirm_delete.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% extends "layouts/base.html" %}
 
-</body>
-</html>
+{% block content %}
+<div class="container mt-5">
+  <h1 class="mb-4">Delete team?</h1>
+  <form action="" method="post">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">Yes</button>
+  </form>
+</div>
+{% endblock %}
