--- a/templates/manager/team_detail.html
+++ b/templates/manager/team_detail.html
@@ -1,1 +1,48 @@
 {% extends "layouts/base.html" %}
+
+{% block content %}
+<div class="container mt-5">
+  <h2 class="mb-4">{{ team.name|upper}}</h2>
+
+  <div class="mb-4">
+    <a href="{% url "manager:team-delete" pk=team.id %}" class="btn btn-danger">Delete</a>
+    <a href="{% url "manager:team-update" pk=team.id %}" class="btn btn-primary">Update</a>
+  </div>
+
+  <ul class="list-group">
+    <ul class="list-group">
+        <li class="list-group-item"><h5 style="display:inline-block"><strong>Name:</strong></h5> {{ team.name }}</li>
+        <li class="list-group-item"><h5 style="display:inline-block"><strong>Team lead:</strong></h5> {{ task.team_lead }}</li>
+        <li class="list-group-item"><h5 style="display:inline-block"><strong>Slogan:</strong></h5> {{ team.slogan }}</li>
+      <br>
+      <li class="list-group-item">
+        <ul class="list-group">
+          <h4>Workers that are part of the team:</h4>
+        <br>
+        {% if team.workers %}
+          {% for t in team.workers.all %}
+            <li class ="list-group-item"><a href="{% url "manager:worker-detail" pk=t.id %}">{{ t.last_name }} {{ t.first_name }}</a></li>
+          {% endfor %}
+        {% else %}
+          <li class ="list-group-item">No workers
+        {% endif %}
+      </ul>
+      </li>
+          <br>
+      <li class="list-group-item">
+        <ul class="list-group">
+          <h4>Projects by which this team is occupied</h4>
+        <br>
+        {% if team.projects %}
+          {% for t in team.projects.all %}
+            <li class ="list-group-item"><a href="{% url "manager:worker-detail" pk=t.id %}">{{ t.name }}</a></li>
+          {% endfor %}
+        {% else %}
+          <li class ="list-group-item">No projects
+        {% endif %}
+      </ul>
+      </li>
+  </ul>
+  </ul>
+</div>
+{% endblock %}
