feat(ui): update sidebar to display all tasks, teams, and projects
This commit updates the sidebar to display all tasks, teams, and projects instead of just the user's own tasks. This provides a more comprehensive view of the task manager and allows users to easily navigate between different entities.

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -25,7 +25,7 @@
         </li>
         <li>
           <a href="{% url 'manager:task-list' %}" class="nav-link ">
-            <span class="pcoded-micon"><i data-feather="clipboard"></i></span><span class="pcoded-mtext">My tasks</span>
+            <span class="pcoded-micon"><i data-feather="clipboard"></i></span><span class="pcoded-mtext">All tasks</span>
           </a>
         </li> 
         <li>
@@ -36,6 +36,11 @@
         <li>
           <a href="{% url 'manager:team-list' %}" class="nav-link ">
             <span class="pcoded-micon"><i data-feather="slack"></i></span><span class="pcoded-mtext">All teams</span>
+          </a>
+        </li> 
+        <li>
+          <a href="{% url 'manager:project-list' %}" class="nav-link ">
+            <span class="pcoded-micon"><i data-feather="code"></i></span><span class="pcoded-mtext">All projects</span>
           </a>
         </li> 
         {% if not request.user.is_authenticated %}
