feat(templates): Update template tags for team list
Replaced `templatetags` with `query_transform` in the `team_list.html` template.

--- a/templates/manager/team_list.html
+++ b/templates/manager/team_list.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 {% load crispy_forms_filters %}
-{% load templatetags %}
+{% load query_transform %}
 {% block content %}
 <div class="container mt-5">
   <h1 class="mb-4">All Teams</h1>
