--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -7,7 +7,7 @@
       <div class="b-bg">
         <i class="feather icon-trending-up"></i>
       </div>
-      <span class="b-title">Datta Able</span>
+      <span class="b-title">Task manager</span>
     </a>
   </div>
   <a class="mobile-menu" id="mobile-header" href="javascript:">
@@ -17,27 +17,8 @@
     <ul class="navbar-nav mr-auto">
       <li><a href="javascript:" class="full-screen" onclick="javascript:toggleFullScreen()"><i
             class="feather icon-maximize"></i></a></li>
-      <li class="nav-item dropdown">
-        <a class="dropdown-toggle" href="javascript:" data-toggle="dropdown">Dropdown</a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="javascript:">Action</a></li>
-          <li><a class="dropdown-item" href="javascript:">Another action</a></li>
-          <li><a class="dropdown-item" href="javascript:">Something else here</a></li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <div class="main-search">
-          <div class="input-group">
-            <input type="text" id="m-search" class="form-control" placeholder="Search . . .">
-            <a href="javascript:" class="input-group-append search-close">
-              <i class="feather icon-x input-group-text"></i>
-            </a>
-            <span class="input-group-append search-btn btn btn-primary">
-              <i class="feather icon-search input-group-text"></i>
-            </span>
-          </div>
-        </div>
-      </li>
+
+
     </ul>
     <ul class="navbar-nav ml-auto">
       <li>
@@ -48,8 +29,6 @@
       </li>
       <li>
         <div class="dropdown">
-          <a class="dropdown-toggle" href="javascript:" data-toggle="dropdown"><i
-              class="icon feather icon-bell"></i></a>
           <div class="dropdown-menu dropdown-menu-right notification">
             <div class="noti-head">
               <h6 class="d-inline-block m-b-0">Notifications</h6>
@@ -110,7 +89,7 @@
           <div class="dropdown-menu dropdown-menu-right profile-notification">
             <div class="pro-head">
               <img src="{% static 'assets/images/user/avatar-1.jpg' %}" class="img-radius" alt="User-Profile-Image">
-              <span>John Doe</span>
+              <span>{{ request.user.username }}</span>
               {% if request.user.is_authenticated %}
   {% if request.user.is_superuser %}
     <form id="logout-form" method="post" action="{% url 'admin:logout' %}" style="display:none;">
@@ -130,14 +109,6 @@
 {% endif %}
             </div>
             <ul class="pro-body">
-              <li><a href="#" class="dropdown-item"><i class="feather icon-settings"></i>
-                  Settings</a></li>
-              <!-- <li><a href="url 'profile' %}" class="dropdown-item"><i class="feather icon-user"></i> -->
-                  Profile</a></li>
-              <li><a href="#" class="dropdown-item"><i class="feather icon-mail"></i> My
-                  Messages</a></li>
-              <li><a href="#" class="dropdown-item"><i class="feather icon-lock"></i> Lock
-                  Screen</a></li>
               {% if request.user.is_authenticated %}
               <li>
                 {% if request.user.is_superuser %}
