--- a/templates/manager/project_list.html
+++ b/templates/manager/project_list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container mt-5">
-  <h1 class="mb-4">All Projects</h1>
+  <h1 class="mb-4">{{ myproject|yesno:"My,All, None" }} Projects</h1>
   <div class="mb-4">
     <a href="{% url 'manager:project-create' %}" class="btn btn-primary">
       Create Project
