feat(ui): Add "(My Team)" label to current team
Displays "(My Team)" next to the team name for the current team in the team list. This provides visual clarity for the user, making it easier to identify their assigned team.

--- a/templates/manager/team_list.html
+++ b/templates/manager/team_list.html
@@ -42,7 +42,7 @@
         {% for team in team_list %}
           <li class="list-group-item">
             <a href="{% url "manager:team-detail" pk=team.id %}">
-              {{ team.name }}
+              {{ team.name }} {% if team_id == team.id %}(My Team) {% endif %}
             </a>
           </li>
         {% endfor %}
