feat(ui): add pagination to task list
Adds pagination to the task list view, allowing users to navigate through large lists of tasks more easily.

--- a/templates/manager/task_list.html
+++ b/templates/manager/task_list.html
@@ -52,6 +52,9 @@
       <p class="lead">WOW, you are lucky, you have <strong>NO TASKS</strong> yet</p>
     {% endif %}
   </div>
+   {% block pagination %}
+    {% include "includes/pagination.html" %}
+  {% endblock %}
 </div>
 {% endblock %}
 
