feat(ui): add pagination to team list
Adds pagination to the team list view to improve usability and performance when dealing with large numbers of teams.

--- a/templates/manager/team_list.html
+++ b/templates/manager/team_list.html
@@ -51,6 +51,9 @@
       <p class="lead">No teams yet</p>
     {% endif %}
   </div>
+   {% block pagination %}
+    {% include "includes/pagination.html" %}
+  {% endblock %}
 </div>
 {% endblock %}
 
