--- a/templates/manager/worker_list.html
+++ b/templates/manager/worker_list.html
@@ -20,7 +20,7 @@
             <button type="submit" class="btn btn-primary">Filter</button>
           </form>
         </div>
-      </div
+      </div>
     </div>
 
     <div class="col-md-6">
