--- a/templates/manager/worker_detail.html
+++ b/templates/manager/worker_detail.html
@@ -2,39 +2,43 @@
 
 {% block content %}
 <div class="container mt-5">
-  <h3 class="mb-4">Username: {{ worker.username|capfirst }}</h3>
+  <h3 class="mb-4">Username: <span class="text-capitalize">{{ worker.username }}</span></h3>
 
   <div class="mb-4">
-    <a href="{% url "manager:worker-delete" pk=worker.id %}" class="btn btn-danger">Delete</a>
-    <a href="{% url "manager:worker-update" pk=worker.id %}" class="btn btn-primary">Update</a>
+    <a href="{% url 'manager:worker-delete' pk=worker.id %}" class="btn btn-danger">Delete</a>
+    <a href="{% url 'manager:worker-update' pk=worker.id %}" class="btn btn-primary">Update</a>
   </div>
 
   <ul class="list-group">
-      <li class="list-group-item"><h5 style="display:inline-block"><strong>Username: </strong></h5> {{ worker.username }}</li>
-  <li class="list-group-item"><h5 style="display:inline-block"><strong>Position: </strong></h5> {{ worker.position }}</li>
-  <li class="list-group-item"><h5 style="display:inline-block"><strong>Last name: </strong></h5> {{ worker.last_name }}</li>
-  <li class="list-group-item"><h5 style="display:inline-block"><strong>First name: </strong></h5> {{ worker.first_name }}</li>
-  <li class="list-group-item"><h5 style="display:inline-block"><strong>Email: </strong></h5> {{ worker.email }}</li>
-      {% if worker.team %}
-        <li class="list-group-item"><h5 style="display:inline-block"><strong>Team:</strong></h5><a href="{% url "manager:team-detail" pk=worker.team.id %}">{{ worker.team }}</a></li>
-        {% else %}
-        <li class="list-group-item"><h5 style="display:inline-block">No team yet</h5></li>
-      {% endif %}
-      <br>
+    <li class="list-group-item"><strong>Username:</strong> {{ worker.username }}</li>
+    <li class="list-group-item"><strong>Position:</strong> {{ worker.position }}</li>
+    <li class="list-group-item"><strong>Last Name:</strong> {{ worker.last_name }}</li>
+    <li class="list-group-item"><strong>First Name:</strong> {{ worker.first_name }}</li>
+    <li class="list-group-item"><strong>Email:</strong> {{ worker.email }}</li>
+    
+    {% if worker.team %}
       <li class="list-group-item">
-        <ul class="list-group">
-          <h4>Projects:</h4>
-        <br>
-        {% if worker.projects %}
-          {% for t in worker.projects.all %}
-            <li class ="list-group-item"><a href="{% url "manager:project-detail" pk=t.id %}">{{ t.name }}</a></li>
-          {% endfor %}
-        {% else %}
-          <li class ="list-group-item">No projects
-        {% endif %}
-      </ul>
+        <strong>Team:</strong> 
+        <a href="{% url 'manager:team-detail' pk=worker.team.id %}">{{ worker.team }}</a>
       </li>
+    {% else %}
+      <li class="list-group-item">No team assigned yet</li>
+    {% endif %}
+  </ul>
+  
+  <br>
+
+  <h4>Projects:</h4>
+  <ul class="list-group mt-3">
+    {% if worker.projects %}
+      {% for project in worker.projects.all %}
+        <li class="list-group-item">
+          <a href="{% url 'manager:project-detail' pk=project.id %}">{{ project.name }}</a>
+        </li>
+      {% endfor %}
+    {% else %}
+      <li class="list-group-item">No projects assigned</li>
+    {% endif %}
   </ul>
 </div>
 {% endblock %}
-
