--- a/templates/manager/worker_form.html
+++ b/templates/manager/worker_form.html
@@ -4,12 +4,16 @@
 {% block content %}
 <div class="container mt-5">
   <h2 class="mb-4">
-    {{ object|yesno:"Update,Create,No" }} worker
+    {{ object|yesno:"Update,Create,No" }} Worker
   </h2>
   <form method="post" action="">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Submit</button>
+
+    <div class="mt-4">
+      <button type="submit" class="btn btn-primary">Submit</button>
+      <a href="{% url 'manager:worker-list' %}" class="btn btn-secondary">Cancel</a>
+    </div>
   </form>
 </div>
 {% endblock %}
